tests/negative/gold/pkg_not_found/main-test.gold
<...>/tests/negative/pkg_not_found/package.lock:7:11: error: Package 'not exist' not found at '<...>/tests/negative/pkg_not_found/not exist'
    path: not exist
          ^~~~~~~~~
tests/negative/pkg_not_found/main-test.toit:5:8: error: Package 'path' for prefix 'error' not found
import error
       ^~~~~
tests/negative/pkg_not_found/main-test.toit:6:1: error: Failed to import 'error2'
import error2
^~~~~~
tests/negative/pkg_not_found/main-test.toit:6:8: note: Folder '<pkg:path2>/.' exists, but is missing a 'error2.toit' file
import error2
       ^~~~~~
tests/negative/pkg_not_found/main-test.toit:7:1: error: Failed to import 'error2.foo'
import error2.foo
^~~~~~
tests/negative/pkg_not_found/main-test.toit:7:15: note: Missing library file. Tried '<pkg:path2>/foo.toit' and '<pkg:path2>/foo/foo.toit'
import error2.foo
              ^~~
tests/negative/pkg_not_found/main-test.toit:8:1: error: Failed to import 'error2.foo.bar'
import error2.foo.bar
^~~~~~
tests/negative/pkg_not_found/main-test.toit:8:15: note: Cannot enter '<pkg:path2>/foo': folder does not exist
import error2.foo.bar
              ^~~
tests/negative/pkg_not_found/main-test.toit:9:1: error: Failed to import 'error2.not-a-directory.bar'
import error2.not-a-directory.bar
^~~~~~
tests/negative/pkg_not_found/main-test.toit:9:15: note: Cannot enter '<pkg:path2>/not_a_directory': not a folder
import error2.not-a-directory.bar
              ^~~~~~~~~~~~~~~
tests/negative/pkg_not_found/main-test.toit:12:15: error: Unresolved identifier: 'foo'
  print error.foo
              ^~~
Compilation failed
